@@ -1,3 +1,8 @@
+2020-09-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sim/ucsim/z80.src/inst_r2k.cc:
+	  Fix xpc handling in Rabbit MMU.
+
 2020-09-15 Sergey Belyashov <sergey.belyashov@gmail.com>
 
 	* src/z80/main.c:
